# befunjit-86

./: CMakeLists.txt  README.md  package-lock.json  package.json
bench/: run.sh
bench/interpreter/: build.sh  main.cpp
src/: main.cpp
src/core/: Binary.cpp  Binary.h  CompType.cpp  CompType.h  Cursor.cpp  Cursor.h  Field.cpp  Field.h  Graph.cpp  Graph.h  Instr.cpp  Instr.h  Path.cpp  Path.h  Pathlet.cpp  Pathlet.h  StaticBindings.h  Vec2.cpp  Vec2.h  alloc.cpp  alloc.h  generate.cpp  generate.h  generateOpt.cpp  generateOpt.h  interpret.cpp  interpret.h  push.cpp  push.h  readPlayfield.cpp  readPlayfield.h
src/parts/: findGraph.cpp  findGraph.h  findGraphOptimize.cpp  findGraphOptimize.h  findPathlet.cpp  findPathlet.h  readPlayfield.cpp  readPlayfield.h  run.cpp  run.h  runLine.cpp  runLine.h
test/: run.mjs
test/spec/find-graph/: branch-h.bf  branch-h.exp  branch-v.bf  branch-v.exp  diamond.bf  diamond.exp  line.exp  loop.bf  loop.exp
test/spec/find-pathlet/: direct.bf  direct.exp  empty.exp  jump.bf  jump.exp  loop-init.bf  loop-init.exp  loop-tiny-wrap-0.bf  loop-tiny-wrap-0.exp  loop-tiny-wrap-1.bf  loop-tiny-wrap-1.exp  loop-tiny.exp  loop-wrap-empty.exp  loop-wrap-string.exp  one.exp  string.bf  string.exp
test/spec/read-playfield/: many-line-long.bf  many-line-long.exp  one-line-long.bf  one-line-long.exp
test/spec/run-line/: add-add-0.bf  add-add-1.bf  add-add-2.bf  add-add-2.exp  add.bf  div.bf  drop-drop.bf  drop.bf  dup-dup.bf  dup.bf  gt.bf  mod.bf  mul.bf  mul1-32bit.bf  mul1-32bit.exp  mul1.bf  mul1.exp  not.bf  read-char-eol.bf  read-char.bf  (+8 more)
(+41 files in other folders)
